# swiftshadow

./: .gitignore  README.md  dev-test.py  docscript.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: pyfix.yml  python-publish.yml
docs/: 404.html  index.html  objects.inv  sitemap.xml
docs-src/: getting-started.md  index.md  providers.md  references.md
docs-src/API Reference/Classes/: proxyInterface.md  quickProxy.md
docs-src/API Reference/Models/: cache-data.md  provider.md  proxy.md
docs-src/Getting Started/: Usage-In-Async-Environments.md  Using-Proxy-Class.md  Using-QuickProxy.md  examples.md
docs-src/Use Swiftshadow with/: AWS-Lambda.md  https.md  requests.md
docs/API Reference/Classes/proxyInterface/: index.html
docs/API Reference/Models/proxy/: index.html
docs/Getting Started/Usage-In-Async-Environments/: index.html
docs/Getting Started/Using-Proxy-Class/: index.html
docs/Getting Started/Using-QuickProxy/: index.html
docs/Getting Started/examples/: index.html
docs/Use Swiftshadow with/AWS-Lambda/: index.html
docs/Use Swiftshadow with/https/: index.html
docs/Use Swiftshadow with/requests/: index.html
docs/getting-started/: index.html
docs/providers/: index.html
docs/references/: index.html
docs/search/: search_index.json
swiftshadow/: __init__.py  cache.py  classes.py  constants.py  exceptions.py  helpers.py  models.py  providers.py  swiftshadow.py  types.py  validator.py
tests/: full-suite.py  requirements-dev.txt  test_models.py  test_proxy.py  test_quickproxy.py
(+3 files in other folders)
