[tool.poetry]
name = "swiftshadow"
version = "1.2.1"
description = "Free IP Proxy rotator for python"
authors = ["sachin-sankar <mail.sachinsankar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
tox = "^4.18.1"
pytest = "^8.3.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings-python = "^1.11.1"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
