[project]
name = "swiftshadow"
version = "2.0.1"
description = "Free IP Proxy rotator for python"
readme = "README.md"
authors = [
    { name = "sachin-sankar", email = "mail.sachinsankar@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
    "appdirs>=1.4.4",
    "requests>=2.32.3",
]

[project.scripts]
swiftshadow = "swiftshadow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-autolinks-plugin>=0.7.1",
    "mkdocs-material>=9.5.50",
    "mkdocstrings-python>=1.13.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
    "tox>=4.23.2",
]
